Created basic custom component

--- a/src/my-about-view.html
+++ b/src/my-about-view.html
@@ -10,6 +10,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
 <link rel="import" href="shared-styles.html">
+<link rel="import" href="shuffle-text.html">
 
 <dom-module id="my-about-view">
   <template>
@@ -24,7 +25,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <div class="card">
       <div class="circle">1</div>
       <h1>About</h1>
-      <p>Ian Watson is a front-end developer with 17 years' experience</p>
+      <p>Ian Watson is a <shuffle-text content="front-end"></shuffle-text> developer with 17 years' experience</p>
       <p>Lorem ipsum dolor sit amet, per in nusquam nominavi periculis, sit elit oportere ea.Lorem ipsum dolor sit amet, per in nusquam nominavi periculis, sit elit oportere ea.Cu mei vide viris gloriatur, at populo eripuit sit.</p>
     </div>
   </template>
